:ambulance: Fix typo in default and sample emojifyrc

--- a/emojifyrc.sample
+++ b/emojifyrc.sample
@@ -5,7 +5,7 @@ docs = ":books:"
 bugfix = ":bug:"
 crucial = ":ambulance:"
 remove = ":fire:"
-tests = ":which_check_mark:"
+tests = ":white_check_mark:"
 security = ":lock:"
 ui = ":lipstick:"
 wip = ":construction:"
